ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.headhuntreview.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mycoolapp
          servicePort: 80
